5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1753_3097.log
== TEST (2019-05-16 19:07:57) 
-- CODE:
a = int(input("posicoes de chegada"))
inf = 14-a
print(inf)

-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:43) 
-- CODE:
a = int(input("posicoes de chegada"))
while a!=0
if a==1:
	pontuacao=25
elif a==2:
	pontuacao=18
elif a==3:
	pontuacao=12
elif a>=4:
	pontuacao=14-a


-- ERROR:
File "XXXX", line 2
    while a!=0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:46) 
-- CODE:
a = int(input("posicoes de chegada"))
while a!=0:
if a==1:
	pontuacao=25
elif a==2:
	pontuacao=18
elif a==3:
	pontuacao=12
elif a>=4:
	pontuacao=14-a


-- ERROR:
File "XXXX", line 3
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:48) 
-- CODE:
a = int(input("posicoes de chegada"))
while a!=0:
if a==1:
	pontuacao=25
elif a==2:
	pontuacao=18
elif a==3:
	pontuacao=12
elif a>=4:
	pontuacao=14-a


-- ERROR:
File "XXXX", line 3
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:55) 
-- CODE:
a = int(input("posicoes de chegada"))
while a!=0:
	if a==1:
		pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a


-- ERROR:
File "XXXX", line 3
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:36) 
-- CODE:
a = int(input("posicoes de chegada"))
while a!=0:
	if a==1:
		pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a
print(pontuacao)		


-- ERROR:
File "XXXX", line 3
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:43) 
-- CODE:
a = int(input("posicoes de chegada"))

	
	if a==1:
		pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a
while a!=0
b=int(input("posicao de chegada"))

		
		


-- ERROR:
File "XXXX", line 4
    if a==1:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:57) 
-- CODE:
a = int(input("posicoes de chegada"))

	
if a==1:
		pontuacao=25
elif a==2:
		pontuacao=18
elif a==3:
		pontuacao=12
elif a>=4:
		pontuacao=14-a
while a!=0
b=int(input("posicao de chegada"))

		
		


-- ERROR:
File "XXXX", line 12
    while a!=0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:17:01) 
-- CODE:
a = int(input("posicoes de chegada"))

	
if a==1:
		pontuacao=25
elif a==2:
		pontuacao=18
elif a==3:
		pontuacao=12
elif a>=4:
		pontuacao=14-a
 while a!=0
b=int(input("posicao de chegada"))

		
		


-- ERROR:
File "XXXX", line 12
    while a!=0
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:06) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
a = int(input("posicao de chegada"))	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 4
    a = int(input())	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:12) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
b = int(input("posicao de chegada"))	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 4
    b = int(input())	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:14) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
 b = int(input("posicao de chegada"))	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:18) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
   b = int(input("posicao de chegada"))	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:19) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
   b = int(input("posicao de chegada"))	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:33) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
   b = int(input("posicao de chegada"))	
	elif a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    elif a==1:
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:41) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	
	elif a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    elif a==1:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:43) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	
	elif a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    elif a==1:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:47) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
 

		
		


-- ERROR:
File "XXXX", line 5
    elif a==1:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:06) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
print(a)			
 

		
		


-- ERROR:
File "XXXX", line 5
    elif a==1:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:19) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
   print(a)			
 

		
		


-- ERROR:
File "XXXX", line 13
    print(a)			
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:42) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	print(a)
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:52) 
-- CODE:
a = int(input("posicoes de chegada"))

while a!=0:
	print(a)
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:35) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a!=0:
	print(pontuacao)
	if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a


		
		


-- OUTPUT:
0
25
50
75
100
125
150
175
200
225
250
275
300
325
350
375
400
425
450
475
500
525
550
575
600
625
650
675
700
725
750
775
800
825
850
875
900
925
950
975
1000
1025
1050
1075
1100
1125
1150
1175
1200
1225
1250
1275
1300
1325
1350
1375
1400
1425
1450
1475
1500
1525
1550
1575
1600
1625
1650
1675
1700
1725
1750
1775
1800
1825
1850
1875
1900
1925
1950
1975
2000
2025
2050
2075
2100
2125
2150
2175
2200
2225
2250
2275
2300
2325
2350
2375
2400
2425
2450
2475
2500
2525
2550
2575
2600
2625
2650
2675
2700
2725
2750
2775
2800
2825
2850
2875
2900
2925
2950
2975
3000
3025
3050
3075
3100
3125
3150
3175
3200
3225
3250
3275
3300
3325
3350
3375
3400
3425
3450
3475
3500
3525
3550
3575
3600
3625
3650
3675
3700
3725
3750
3775
3800
3825
3850
3875
3900
3925
3950
3975
4000
4025
4050
4075
4100
4125
4150
4175
4200
4225
4250
4275
4300
4325
4350
4375
4400
4425
4450
4475
4500
4525
4550
4575
4600
4625
4650
4675
4700
4725
4750
4775
4800
4825
4850
4875
4900
4925
4950
4975
5000
5025
5050
5075
5100
5125
5150
5175
5200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:55) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a!=0:
	print(pontuacao)
	if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a


		
		


-- OUTPUT:
0
25
50
75
100
125
150
175
200
225
250
275
300
325
350
375
400
425
450
475
500
525
550
575
600
625
650
675
700
725
750
775
800
825
850
875
900
925
950
975
1000
1025
1050
1075
1100
1125
1150
1175
1200
1225
1250
1275
1300
1325
1350
1375
1400
1425
1450
1475
1500
1525
1550
1575
1600
1625
1650
1675
1700
1725
1750
1775
1800
1825
1850
1875
1900
1925
1950
1975
2000
2025
2050
2075
2100
2125
2150
2175
2200
2225
2250
2275
2300
2325
2350
2375
2400
2425
2450
2475
2500
2525
2550
2575
2600
2625
2650
2675
2700
2725
2750
2775
2800
2825
2850
2875
2900
2925
2950
2975
3000
3025
3050
3075
3100
3125
3150
3175
3200
3225
3250
3275
3300
3325
3350
3375
3400
3425
3450
3475
3500
3525
3550
3575
3600
3625
3650
3675
3700
3725
3750
3775
3800
3825
3850
3875
3900
3925
3950
3975
4000
4025
4050
4075
4100
4125
4150
4175
4200
4225
4250
4275
4300
4325
4350
4375
4400
4425
4450
4475
4500
4525
4550
4575
4600
4625
4650
4675
4700
4725
4750
4775
4800
4825
4850
4875
4900
4925
4950
4975
5000
5025
5050
5075
5100
5125
5150
5175
5200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:05) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a>0<10:
	print(pontuacao)
	if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a


		
		


-- OUTPUT:
0
25
50
75
100
125
150
175
200
225
250
275
300
325
350
375
400
425
450
475
500
525
550
575
600
625
650
675
700
725
750
775
800
825
850
875
900
925
950
975
1000
1025
1050
1075
1100
1125
1150
1175
1200
1225
1250
1275
1300
1325
1350
1375
1400
1425
1450
1475
1500
1525
1550
1575
1600
1625
1650
1675
1700
1725
1750
1775
1800
1825
1850
1875
1900
1925
1950
1975
2000
2025
2050
2075
2100
2125
2150
2175
2200
2225
2250
2275
2300
2325
2350
2375
2400
2425
2450
2475
2500
2525
2550
2575
2600
2625
2650
2675
2700
2725
2750
2775
2800
2825
2850
2875
2900
2925
2950
2975
3000
3025
3050
3075
3100
3125
3150
3175
3200
3225
3250
3275
3300
3325
3350
3375
3400
3425
3450
3475
3500
3525
3550
3575
3600
3625
3650
3675
3700
3725
3750
3775
3800
3825
3850
3875
3900
3925
3950
3975
4000
4025
4050
4075
4100
4125
4150
4175
4200
4225
4250
4275
4300
4325
4350
4375
4400
4425
4450
4475
4500
4525
4550
4575
4600
4625
4650
4675
4700
4725
4750
4775
4800
4825
4850
4875
4900
4925
4950
4975
5000
5025
5050
5075
5100
5125
5150
5175
5200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:51) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0

while a=0	
print(pontuacao)
   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a=0	
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:01) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0

while a=0	

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a=0	
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:13) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0

while a==0
print(pontuacao)

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:21) 
-- CODE:
a = float(input("posicoes de chegada"))
pontuacao=0

while a==0
print(pontuacao)

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:45) 
-- CODE:
a = float(input("posicoes de chegada"))


while a==0
print(pontuacao)

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:46) 
-- CODE:
a = float(input("posicoes de chegada"))


while a==0
print(pontuacao)

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:49) 
-- CODE:
a = float(input("posicoes de chegada"))


  while a==0
print(pontuacao)

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a==0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:52) 
-- CODE:
a = float(input("posicoes de chegada"))


   while a==0
print(pontuacao)

   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a

		
		


-- ERROR:
File "XXXX", line 4
    while a==0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:14) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a=0:
	
   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a


		
		


-- ERROR:
File "XXXX", line 3
    while a=0:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:17) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a


		
		


-- ERROR:
File "XXXX", line 6
    pontuacao+=25
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:05) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 6
    pontuacao=25
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:06) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 6
    pontuacao=25
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:14) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 6
    pontuacao=25
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:16) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	 pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 6
    pontuacao=25
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:17) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	  pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 6
    pontuacao=25
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:18) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:23) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:30) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		ontuacao=12
	elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:34) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:00) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:01) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:01) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:02) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
   if a==1:
	   pontuacao=25
	elif a==2:
		pontuacao=18
	elif a==3:
		pontuacao=12
	elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 7
    elif a==2:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:55) 
-- CODE:
a = int(input("posicoes de chegada"))
while a>0 and a=<10



		
		


-- ERROR:
File "XXXX", line 2
    while a>0 and a=<10
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:03) 
-- CODE:
a = int(input("posicoes de chegada"))
while 10>a>0


		
		


-- ERROR:
File "XXXX", line 2
    while 10>a>0
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:08) 
-- CODE:
a = int(input("posicoes de chegada"))
while a>0


		
		


-- ERROR:
File "XXXX", line 2
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:09) 
-- CODE:
a = int(input("posicoes de chegada"))
while a>0


		
		


-- ERROR:
File "XXXX", line 2
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:10) 
-- CODE:
a = int(input("posicoes de chegada"))
while a>0


		
		


-- ERROR:
File "XXXX", line 2
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:10) 
-- CODE:
a = int(input("posicoes de chegada"))
while a>0


		
		


-- ERROR:
File "XXXX", line 2
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:18) 
-- CODE:
a = float(input("posicoes de chegada"))
while a>0


		
		


-- ERROR:
File "XXXX", line 2
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:26) 
-- CODE:
a = float(input("posicoes de chegada"))
while a!= 0


		
		


-- ERROR:
File "XXXX", line 2
    while a!= 0
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:43) 
-- CODE:
a = float(input("posicoes de chegada"))
while a==0
print(a)



		
		


-- ERROR:
File "XXXX", line 2
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:44) 
-- CODE:
a = float(input("posicoes de chegada"))
while a==0
print(a)



		
		


-- ERROR:
File "XXXX", line 2
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:44) 
-- CODE:
a = float(input("posicoes de chegada"))
while a==0
print(a)



		
		


-- ERROR:
File "XXXX", line 2
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:45) 
-- CODE:
a = float(input("posicoes de chegada"))
while a==0
print(a)



		
		


-- ERROR:
File "XXXX", line 2
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:32) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
if a==1:
	   pontuacao=25
elif a==2:
		pontuacao=18
elif a==3:
		pontuacao=12
elif a>=4:
		pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:44) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a


		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:28) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
	if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a
print()			


		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:33) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
	if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a
print(pontuacao)			


		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:39) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
while a==0:
	
	if a==1:
			pontuacao+=25
	elif a==2:
			pontuacao+=18
	elif a==3:
			pontuacao+=12
	elif a>=4:
			pontuacao+=14-a
print(pontuacao)			


		
		


-- ERROR:
File "XXXX", line 5
    if a==1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:32) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
	if a==1:
			pontuacao=25
	elif a==2:
			pontuacao=18
	elif a==3:
			pontuacao=12
	elif a>=4:
			pontuacao=14-a
print(pontuacao)			


		
		


-- ERROR:
File "XXXX", line 4
    if a==1:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:40) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao=25
elif a==2:
			pontuacao=18
elif a==3:
			pontuacao=12
elif a>=4:
			pontuacao=14-a
print(pontuacao)			


		
		


-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:16) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a==0
print pontuacao


		
		


-- ERROR:
File "XXXX", line 12
    while a==0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:41) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a=0
print pontuacao


		
		


-- ERROR:
File "XXXX", line 12
    while a=0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:00) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a>0
print pontuacao


		
		


-- ERROR:
File "XXXX", line 12
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:01) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a>0
print pontuacao


		
		


-- ERROR:
File "XXXX", line 12
    while a>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:15) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a>0:
print pontuacao


		
		


-- ERROR:
File "XXXX", line 13
    print pontuacao
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:26) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a==0:
print (pontuacao)


		
		


-- ERROR:
File "XXXX", line 13
    print (pontuacao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:32) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a==0:
print(pontuacao)


		
		


-- ERROR:
File "XXXX", line 13
    print(pontuacao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:33) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a==0:
print(pontuacao)


		
		


-- ERROR:
File "XXXX", line 13
    print(pontuacao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:33) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a==0:
print(pontuacao)


		
		


-- ERROR:
File "XXXX", line 13
    print(pontuacao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:36) 
-- CODE:
a = int(input("posicoes de chegada"))
pontuacao=0
	
if a==1:
			pontuacao+=25
elif a==2:
			pontuacao+=18
elif a==3:
			pontuacao+=12
elif a>=4:
			pontuacao+=14-a
while a==0:
 print(pontuacao)


		
		


-- ERROR:
File "XXXX", line 13
    print(pontuacao)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
